# grounds

./: .buildconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md
.agent/: conventions.md
.agent/skills/: capture.md  ingest.md  learn.md  lint.md  query.md
.agents/: conventions.md
.agents/archive/: .gitkeep
.agents/skills/video-render-pdf/: SKILL.md  TROUBLESHOOTING.md  config.py  pyproject.toml
.agents/skills/video-render-pdf/assets/: notes-template.tex
.agents/skills/video-render-pdf/scripts/: api_transcribe.py  frame_assess.py  tex_to_md.py
.config/video-render-pdf/: README.md
.github/workflows/: deploy.yml
.trae/rules/: grounds.md
paper/: index.md
paper/llm/: FlashAttention.md  index.md
project_logs/MiniCPM/: changes.md  decisions.md  experiments.md  index.md  learning-journal.md  pitfalls.md  runbook.md
project_logs/vllm-plus/: decisions.md  index.md  learning-journal.md  pitfalls.md  runbook.md
quartz/: quartz.config.yaml  quartz.lock.json
quartz/content/: index.md  project_logs
raw/: .gitkeep
video/: index.md
video/AI-Infra规划课和模拟面—2026年7月11日—帮学员看简历/: AI-Infra规划课和模拟面—2026年7月11日—帮学员看简历.tex  index.md
video/AI-Infra规划课和模拟面—26年4月26日场—算子优化五步法/: AI-Infra规划课和模拟面—26年4月26日场—算子优化五步法.aux  AI-Infra规划课和模拟面—26年4月26日场—算子优化五步法.out  AI-Infra规划课和模拟面—26年4月26日场—算子优化五步法.tex  AI-Infra规划课和模拟面—26年4月26日场—算子优化五步法.toc  index.md
video/AI-Infra规划课和模拟面—vLLM大模型推理优化岗我会怎么面？/: AI-Infra规划课和模拟面—vLLM大模型推理优化岗我会怎么面？.aux  AI-Infra规划课和模拟面—vLLM大模型推理优化岗我会怎么面？.out  index.md  (+2 more)
web/: astro.config.mjs  package-lock.json  package.json
wiki/: .gitkeep  index.md
(+160 files in other folders)
